school-system/src/main/java/com/example/school/system/error/OtpExceptionHandler.java
package com.example.school.system.error;

public class OtpExceptionHandler extends RuntimeException {
    public OtpExceptionHandler(String message) {
        super(message);
    }
}
